--- a/aq-dashboard/package.json
+++ b/aq-dashboard/package.json
@@ -8,7 +8,6 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.126",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "axios": "^1.10.0",
@@ -19,7 +18,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -49,6 +48,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.20",
+    "@types/node": "^24.1.0",
     "@types/react-leaflet": "^2.8.3"
   }
 }
