Fix error on the package.json by not adding ,

--- a/aq-dashboard/package.json
+++ b/aq-dashboard/package.json
@@ -1,6 +1,6 @@
 {
-  "type": "module"
   "name": "aq-dashboard",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
